@@ -61,6 +61,7 @@ namespace bt
 		virtual Uint64 diskUsage();
 		virtual void loadFileMap();
 		virtual void saveFileMap();
+		virtual bool getMountPoints(QSet<QString>& mps);
 
 	private:
 		void touch(TorrentFile & tf);
